examples/e2e/deployment/envoyconfig.yaml
apiVersion: marin3r.3scale.net/v1alpha1
kind: EnvoyConfig
metadata:
  name: kuard
spec:
  nodeID: kuard
  serialization: yaml
  envoyAPI: v3
  envoyResources:
    secrets:
      - name: kuard.default.svc
        ref:
          name: kuard
    clusters:
      - name: kuard
        value: |
          name: kuard
          connect_timeout: 10ms
          type: STRICT_DNS
          dns_lookup_family: V4_ONLY
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: kuard
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: kuard
                          port_value: 8080
    routes:
      - name: local
        value: |
          name: local
          virtual_hosts:
            - name: all
              domains: ["*"]
              routes:
                - match:
                    prefix: "/"
                  route:
                    cluster: kuard
    listeners:
      - name: https
        value: |
          name: https
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8443
          filter_chains:
            - filters:
              - name: envoy.filters.network.http_connection_manager
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                  access_log:
                    - name: envoy.access_loggers.file
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                        path: /dev/stdout
                  stat_prefix: ingress_http
                  rds: { route_config_name: "local", config_source: { ads: {}, resource_api_version: "V3" }}
                  http_filters:
                    - name: envoy.filters.http.router
              transport_socket:
                name: envoy.transport_sockets.tls
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
                  common_tls_context:
                    tls_certificate_sds_secret_configs:
                      - name: kuard.default.svc
                        sds_config: { ads: {}, resource_api_version: "V3" }
