examples/e2e/deployment/envoydeployment.yaml
apiVersion: operator.marin3r.3scale.net/v1alpha1
kind: EnvoyDeployment
metadata:
  name: kuard
spec:
  discoveryServiceRef: instance
  envoyConfigRef: kuard
  ports:
    - name: https
      port: 8443
  extraArgs:
    - --component-log-level
    - http:debug
  adminAccessLogPath: /dev/stdout
